Completed 'WPF Data Binding' assignment as specified in Canvas for CIS400 and added functionality to 'Add New Person' button that was not specified in Canvas but assumed to be in the best interest of the assignment's purpose.

--- a/UniversityRegistry/UI/PersonControl.xaml
+++ b/UniversityRegistry/UI/PersonControl.xaml
@@ -1,4 +1,10 @@
-﻿<UserControl x:Class="UniversityRegistry.UI.PersonControl"
+﻿<!--
+    Author: Nathan Bean.
+    Edited By: William Raymann.
+    Class: PersonControl.xaml.
+    Purpose: To allow the user to edit people in the University.
+    -->
+<UserControl x:Class="UniversityRegistry.UI.PersonControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -11,18 +17,28 @@
             <TextBlock FontSize="18">Personal Details</TextBlock>
             
             <Label Content="First Name"/>
-            <TextBox Name="txtFirstName"/>
+            <TextBox Name="txtFirstName" Text="{Binding Path=FirstName}"/>
             
             <Label Content="Last Name"/>
-            <TextBox Name="txtLastName"/>
+            <TextBox Name="txtLastName" Text="{Binding Path=LastName}"/>
             
             <Label Content="Date of Birth"/>
-            <DatePicker Name="dpDateOfBirth"/>
+            <DatePicker Name="dpDateOfBirth" SelectedDate="{Binding Path=DateOfBirth}"/>
             
-            <CheckBox Name="cbActive" Margin="0 10 0 0">Active</CheckBox>
-            
+            <CheckBox Name="cbActive" Margin="0 10 0 0" IsChecked="{Binding Path=Active}">Active</CheckBox>
+
             <Label Content="Role"/>
-            <TextBox Name="txtRole"/>
+            <RadioButton GroupName="Role" IsChecked="{Binding Path=IsUndergraduateStudent}">
+                UndergraduateStudent</RadioButton>
+            <RadioButton GroupName="Role" IsChecked="{Binding Path=IsGraduateStudent}">
+                GraduateStudent</RadioButton>
+            <RadioButton GroupName="Role" IsChecked="{Binding Path=IsFaculty}">
+                Faculty</RadioButton>
+            <RadioButton GroupName="Role" IsChecked="{Binding Path=IsStaff}">
+                Staff</RadioButton>
+
+            <Label Content="ID"/>
+            <TextBlock Text="{Binding Path=ID}"/>
 
         </StackPanel>
     </Border>
