--- a/UniversityRegistry/UI/PersonList.xaml
+++ b/UniversityRegistry/UI/PersonList.xaml
@@ -1,4 +1,11 @@
-﻿<UserControl x:Class="UniversityRegistry.UI.PersonList"
+﻿<!--
+    Author: Nathan Bean.
+    Edited By: William Raymann.
+    Class: PersonControl.xaml.
+    Purpose: To allow the user to view people in the University and
+            to add new people to the University.
+    -->
+<UserControl x:Class="UniversityRegistry.UI.PersonList"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -16,9 +23,25 @@
 
             <TextBlock FontSize="18">University Directory</TextBlock>
 
-            <ListView Grid.Row="1"/>
+            <ListView Grid.Row="1" ItemsSource="{Binding}" Name="PeopleDisplay" 
+                      SelectionChanged="OnSelectionChanged" SelectionMode="Single" HorizontalContentAlignment="Stretch">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <Grid>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                                <ColumnDefinition/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="{Binding Path=FirstName}" Grid.Column="0"/>
+                            <TextBlock Text="{Binding Path=LastName}" Grid.Column="1"/>
+                            <TextBlock Text="{Binding Path=ID}" Grid.Column="2"/>
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
 
-            <Button Grid.Row="2">Add New Person</Button>
+            <Button Grid.Row="2" Click="OnAddNewPerson">Add New Person</Button>
         </Grid>
     </Border>
 
